[tool.poetry]
name = "backend-slacktweet"
version = "0.1.0"
description = "A bot for tracking tweets on slack"
authors = ["Mike A. <jimalik2525@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.5"
tweepy = "^3.8.0"
slackclient = "^2.5.0"
python-dotenv = "^0.13.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
